[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Niraj <niraj@polywrap.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polywrap-msgpack = { path = "../packages/polywrap-msgpack", develop = true }
polywrap-manifest = { path = "../packages/polywrap-manifest", develop = true }

[tool.poetry.group.dev.dependencies]
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"

